# vadikatti

./: LICENSE  Makefile  flake.nix  vadikatti.cabal
app/: BowMain.hs  FrequencyMain.hi  FrequencyMain.hs  Main.hs
src/: Bow.hs  Frequency.hi  Frequency.hs
